fixed intro on mobile devices

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -845,11 +845,7 @@
     }
 }
 
-@media screen and (max-width: 992.02px) {
-    .intro {
-        padding-bottom: 22vh;
-    }
-    
+@media screen and (max-width: 992.02px) {    
     .afisha {
         &__items {
             flex-direction: column;
